devel
-----

* Add TransactionStatistics to ServerStatistics (transactions started /
  aborted / committed and number of intermediate commits).

* Agents to remove callback entries when responded to with code 404

* Added AQL function DATE_ROUND to bin a date/time into a set of equal-distance
  buckets.

* Enforced the valid date range for working with date/time in AQL. The valid date
  ranges for any AQL date/time function are:

  - for string date/time values: `"0000-01-01T00:00:00.000Z"` (including) up to 
    `"9999-12-31T23:59:59.999Z"` (including)
  - for numeric date/time values: -62167219200000 (including) up to 253402300799999
    (including). These values are the numeric equivalents of 
    `"0000-01-01T00:00:00.000Z"` and `"9999-12-31T23:59:59.999Z"`.

  Any date/time values outside the given range that are passed into an AQL date
  function will make the function return `null` and trigger a warning in the query,
  which can optionally be escalated to an error and stop the query.

  Any date/time operations that produce date/time outside the valid ranges stated
  above will make the function return `null` and trigger a warning too. An example
  for this is

      DATE_SUBTRACT("2018-08-22T10:49:00+02:00", 100000, "years")

* Fixed bug in MoveShard::abort which causes a duplicate entry in the follower list. (Internal Bug #4378)

* Fixed cut'n'pasting code from the documentation into arangosh.

* Added initial support for wgs84 reference ellipsoid in GEO_DISTANCE through third
  optional parameter to AQL function

* Added support for area calculations with GEO_AREA AQL function

* Added resign leadership job to supervision.

* Keep followers in sync if the old leader resigned and stopped writes.

* Abort a FailedLeader job when its _to_ server fails.

* Removed content from Documentation/Books, but keeping the subfolders.
  The documentation is in a separate repository (except DocuBlocks and Scripts):
  https://github.com/arangodb/docs.git
